# linux-utils

./: .gitignore  .gitmodules  .template.md  README.md  alert  backup  bash-hs  bcomm  bcommand  bfg  bman  catl  chuck-norris-fact  clone-all-from-github  custom-rc  display-wifi-credentials  docker-clean-useless-images  docker-ps  docker-remove-all-containers  docker-show-addresses  docker-show-adresses  download-package  file.example  generate-key  generate-openssl-key  get-docker.sh  get-gpl3  get-public-address  git-backup  git-backup_config.json  git-config-identification  git-create-github-remote  git-create-remote  git-create-ssh-remote  git-list-remote  git-pull-all-from-github  git-shortcuts  git-shortcuts.md  git-stats-by-author  git-update  (+46 more)
config-helpers/: awesome-jokes.sh  cli-config  installation-script  installation.json
configuration/: atom-packages.sh  backup-repositories.sh  bashrc  cli-config  conkyrc.lua  crontab  custom-rc  default-ssl.conf  dot-custom-rc  dot-zshrc  etc.X11.xorg.conf.d.60-touchpad-settings.conf  etc.apt.preferences.d.settings  etherpad.settings.json  fstab  home.remipassmoilesel.config.autostart.arandr-auto.desktop  infos.php  intellij.desktop  keymap.cson.atom  kubectl.sh  localhost.crt  localhost.key  opt.lampp.apache2.conf.httpd.conf  setup-arch.sh  setup-fedora.sh  setup-ubuntu.sh  setup.sh  sources.list.debian9  xfce-panel-left.tar.bz2  zshrc  (+1 more)
memo-rs/: Cargo.toml  TODO.md  memo-storage.txt
memo-rs/src/: argument_parser.rs  commands.rs  config.rs  logger.rs  main.rs  storage.rs
memo-rs/src/short_memo/: short_memo.rs
(+392 files in other folders)
