[package]
name = "memo-rs"
version = "0.1.0"
authors = ["Rémi Passmoilesel <r.passmoilesel@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1.1.0"
serde = "1.0.102"
colored = "1.8.0"
dirs = "2.0.2"
chrono = "0.4.9"
regex = "1.3.1"
